--- a/configs/configuration.properties
+++ b/configs/configuration.properties
@@ -1,5 +1,5 @@
 browser=chrome
-windowMaximize=false
-implicitWait=20
+windowMaximize=true
+implicitWait=4
 url=https://www.epexspot.com/en/market-data
 testDataResourcePath=src/test/resources/testDataResources/
